# Birthday-Logg

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
docs/scripts/: startup.sh
project_folder/: __init__.py  auth.py  bday.py  db.py  schema.sql
project_folder/api/: auth.py  bday.py
project_folder/static/css/: globals.css  style.css
project_folder/static/js/: base.js  tab.js
project_folder/templates/: base.html  intro.html
project_folder/templates/auth/: login.html  register.html
project_folder/templates/bday/: index.html  update.html
